--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,12 @@
           <a href="#" class="footer__icon"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="footer__icon"><i class="bx bxl-github"></i></a>
         </div>
-        <p>Made with fun and love &#169; 2020 copyright all right reserved</p>
+        <p>
+            Made this website with fun
+            <i class="bx bx-basketball bx-spin" style="color: orange"></i> and
+            love <i class="bx bxs-heart bx-burst" style="color: red"></i> by COSTA. Copyright &#169;
+            2020.
+          </p>
       </footer>
     </div>
     <!-- JQuery-->
