--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <a href="#home" class="nav__link">Home</a>
               </li>
               <li class="nav__item">
-                <a href="#biography" class="nav__link">Biography</a>
+                <a href="#projects" class="nav__link">Projects</a>
               </li>
               <li class="nav__item">
-                <a href="#projects" class="nav__link">Projects</a>
+                <a href="#biography" class="nav__link">Biography</a>
               </li>
               <li class="nav__item">
                 <a href="#performance" class="nav__link">Performance</a>
@@ -107,6 +107,26 @@
           </div>
         </section>
 
+        <!--===== WORK =====-->
+        <section class="work section" id="projects">
+          <h2 class="section-title">Projects Made</h2>
+
+          <div class="work__container bd-grid">
+            <div class="work__img">
+              <img src="assets/img/work1.1.jpg" alt="" />
+            </div>
+            <div class="work__img">
+              <img src="assets/img/soon.jpg" alt="" />
+            </div>
+            <div class="work__img">
+              <img src="assets/img/soon.jpg" alt="" />
+            </div>
+            <div class="work__img">
+              <img src="assets/img/soon.jpg" alt="" />
+            </div>
+          </div>
+        </section>
+
         <!--===== ABOUT =====-->
         <section class="about section" id="biography">
           <h2 class="section-title">Biography</h2>
@@ -125,23 +145,6 @@
                 <br />
                 Right now working as Freelancer.
               </p>
-            </div>
-          </div>
-        </section>
-
-        <!--===== WORK =====-->
-        <section class="work section" id="projects">
-          <h2 class="section-title">Projects Made</h2>
-
-          <div class="work__container bd-grid">
-            <div class="work__img">
-              <img src="assets/img/work1.1.jpg" alt="" />
-            </div>
-            <div class="work__img">
-              <img src="assets/img/soon.jpg" alt="" />
-            </div>
-            <div class="work__img">
-              <img src="assets/img/soon.jpg" alt="" />
             </div>
           </div>
         </section>
@@ -227,7 +230,7 @@
               </div>
               <div class="skills__data">
                 <div class="skills__names">
-                  <i class="bx bxl-git bx-spin skills__icon"></i>
+                  <i class="bx bxl-git skills__icon"></i>
                   <span class="skills__name">GIT</span>
                 </div>
                 <div class="skills__bar skills__git"></div>
@@ -283,7 +286,12 @@
           <a href="#" class="footer__icon"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="footer__icon"><i class="bx bxl-github"></i></a>
         </div>
-        <p>Made with fun and love &#169; 2020 copyright all right reserved</p>
+        <p>
+          Made this website with fun
+          <i class="bx bx-basketball bx-spin" style="color: orange"></i> and
+          love <i class="bx bxs-heart bx-burst" style="color: red"></i> by
+          COSTA. Copyright &#169; 2020.
+        </p>
       </footer>
     </div>
     <div class="welcome-section content-hidden">
@@ -291,7 +299,9 @@
         <ul class="fly-in-text">
           <li>WELCOME VISITORS👨🏻‍💻</li>
         </ul>
-        <a href="#" class="enter-button toggle">REVIEW HERE</a>
+        <a href="#" class="enter-button toggle"
+          >REVIEW HERE <br /><i class="bx bx-down-arrow-alt bx-fade-down"></i
+        ></a>
       </div>
     </div>
     <!-- JQuery-->
