Another change made index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <section class="home" id="home">
           <div class="home__data">
             <h1 class="home__title">
-              Hello,<br />Check out <br />
+              Check out <br />
               <span class="home__title-color">my portfolio below</span><br />
-              Freelance <br />FE Developer
+              Freelance FE Developer
             </h1>
             <a href="#" class="button theButton">Download CV</a>
           </div>
