--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DEVILSON COSTA | PORTFOLIO</title>
+    <title>DEVILSON COSTA | PERFIL</title>
 
     <!-- Bootstrap CSS-->
     <link
@@ -32,7 +32,7 @@
       <header class="l-header">
         <nav class="nav bd-grid">
           <div>
-            <a href="#" class="nav__logo" style="color: dodgerblue">DCS COSTA | FRONT-END DEVELOPER</a>
+            <a href="#" class="nav__logo" style="color: dodgerblue">DCS COSTA <i class='bx bx-code-block bx-flashing' ></i> FRONT-END DEVELOPER</a>
           </div>
 
           <div class="nav__menu" id="nav-menu">
