another little change made

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <header class="l-header">
         <nav class="nav bd-grid">
           <div>
-            <a href="#" class="nav__logo" style="color: dodgerblue">DCS COSTA <i class='bx bx-code-block bx-flashing' ></i> FRONT-END DEVELOPER</a>
+            <a href="#" class="nav__logo nav-link text-primary disabled" style="color: dodgerblue">DCS COSTA <i class='bx bx-code-block bx-flashing' ></i> FRONT-END DEVELOPER</a>
           </div>
 
           <div class="nav__menu" id="nav-menu">
