--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <header class="l-header">
         <nav class="nav bd-grid">
           <div>
-            <a href="#" class="nav__logo" style="color: dodgerblue"
+            <a
+              href="#"
+              class="nav__logo nav-link text-primary disabled"
+              style="color: dodgerblue"
               >DCS COSTA <i class="bx bx-code-block bx-flashing"></i> FRONT-END
               DEVELOPER</a
             >
@@ -91,7 +94,10 @@
               <span class="home__title-color">My portfolio below</span><br />
               Freelance FE Developer
             </h1>
-            <a href="#" class="button theButton nav-link text-light disabled"" aria-disabled="true"
+            <a
+              href="#"
+              class="button theButton nav-link text-light disabled"
+              aria-disabled="true"
               >Download CV</a
             >
           </div>
