--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div id="consent-popup" class="hidden alert alert-warning" role="alert">
+    <div id="consent-popup" class="alert alert-warning" role="alert">
       <p>
         Whenever the scrolling is locked, there is a gold lock in the menu bar
         to unlock/lock it!. I use this for security purpose.
-        <button class="theBtn" id="accept">Got it</button>
+        <button class="theBtn" onclick="acceptDiv()" id="accept">Got it</button>
       </p>
     </div>
     <div class="theScrollBtn" id="topBtn">
