menu bar changed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
           </div>
 
           <div class="nav__toggle" id="nav-toggle">
-            <i class="bx bx-menu"></i>
+            <i
+              class="bx bx-menu-alt-left bx-flip-horizontal"
+              style="color: white"
+            ></i>
           </div>
         </nav>
       </header>
