changes made in the website

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="home__data">
             <h1 class="home__title">
               Check out <br />
-              <span class="home__title-color">My portfolio below</span><br />
+              <span class="home__title-color">My perfil below</span><br />
               Freelance FE Developer
             </h1>
             <a
@@ -156,7 +156,9 @@
             </div>
 
             <div>
-              <h2 class="about__subtitle">I am Devilson Costa</h2>
+              <h2 class="about__subtitle" style="color: white">
+                Devilson Costa
+              </h2>
               <p class="about__text">
                 Grew up with an eager for technology and creativity. He obtained
                 the skills in Software Development in Electrical Engineering at
@@ -318,11 +320,11 @@
     <div class="welcome-section content-hidden">
       <div class="content-wrap">
         <ul class="fly-in-text">
-          <li>WELCOME VISITORS👨🏻‍💻</li>
+          <li>WELCOME VISITORS</li>
         </ul>
-        <a href="#" class="enter-button toggle"
-          >REVIEW HERE <br /><i class="bx bx-down-arrow-alt bx-fade-down"></i
-        ></a>
+        <a href="#" class="enter-button toggle">
+          <i class="bx bx-down-arrow-alt bx-fade-down"></i><br />REVIEW</a
+        >
       </div>
     </div>
     <!-- JQuery-->
