--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,10 @@
           </div>
 
           <div class="nav__toggle" id="nav-toggle">
-            <i class="bx bx-menu"></i>
+            <i
+            class="bx bx-menu-alt-left bx-flip-horizontal"
+            style="color: white"
+          ></i>
           </div>
         </nav>
       </header>
