--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
                 class="contact__input"
               />
               <input type="mail" placeholder="Enter email" class="contact__input" />
+              <input type="number" placeholder="Enter contact number" class="contact__input" />
               <textarea
                 name=""
                 id=""
