--- a/index.html
+++ b/index.html
@@ -160,9 +160,21 @@
                 Devilson Costa
               </h2>
               <p class="about__text">
-                Grew up with an eager for technology and creativity. He obtained
-                the skills in Software Development in Electrical Engineering at
-                CPUT. He worked as an intern software developer in South Africa.
+                <span style="color: white">A</span> simple lad who is keen and
+                curious about the tech world that is happening around the world,
+                but what really makes me immerse himself into it,<span
+                  style="color: gold"
+                  >is coding</span
+                >.
+                <br />
+                Many see coding as a challenge, which is a good thing, because
+                <strong
+                  ><i
+                    >"Life without challenge is like a life without fun"</i
+                  ></strong
+                >, so coding is something to have fun with, like video games.
+                <br />
+                The more I learn, the interested and funnier it gets.
                 <br />
                 Currently working as Freelancer, I already developed my very
                 first website, you can have a look on it right above on the
