another changes made

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div>
             <a
               href="#"
-              class="nav__logo nav-link text-primary disabled"
-              style="color: dodgerblue"
+              class="nav__logo nav-link text-white content-1 disabled"
+              style="color: white"
               >DCS COSTA <i class="bx bx-code-block bx-flashing"></i> FRONT-END
               DEVELOPER</a
             >
@@ -352,10 +352,12 @@
 
     <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
+    <script src="js/notation.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="js/waypoint.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main1.js" type="text/javascript"></script>
     <script src="js/barLoading.js" type="text/javascript"></script>
     <script src="js/scrollTop.js" type="text/javascript"></script>
     <script src="js/introScrollLock.js" type="text/javascript"></script>
